--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.13.2",
     "expo-linear-gradient": "^15.0.7",
+    "i18next": "^25.7.1",
     "react": "19.1.1",
+    "react-i18next": "^16.4.0",
     "react-native": "0.82.1",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-linear-gradient": "^2.8.3",
